Fix "jumping link arrow" effect

--- a/look/style.less
+++ b/look/style.less
@@ -1185,6 +1185,7 @@ a.learn-more {
     &:after {
         position: absolute;
         right: .3em;
+        top: .1em;
         content: " ▸";
         opacity: 0.8;
         transition: all 150ms linear;
